# vided

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
scripts/: check_release_bump.py  generate_example_media.sh
src/vided/: __init__.py  _version.py  audio_presets.py  audio_preview.py  cli.py  contact_sheet.py  errors.py  ffmpeg.py  filtergraph.py  frames.py  image_badge.py  project.py  redactions.py  render.py  skill_installer.py  time_ranges.py  trimmer.py  ui_server.py  vad.py
src/vided/data/: __init__.py
src/vided/skills/vided/: SKILL.md
src/vided/static/: app.js  index.html  styles.css
tests/: conftest.py  helpers.py  test_audio_e2e.py  test_audio_presets.py  test_audio_preview.py  test_audio_render_args.py  test_cli.py  test_contact_sheet.py  test_e2e_browser.py  test_e2e_fixture.py  test_filtergraph.py  test_frames.py  test_image_badge.py  test_project.py  test_redactions.py  test_release_bump_check.py  test_render.py  test_skill_installer.py  test_time_ranges.py  test_trimmer.py  test_ui_server.py  test_vad.py  test_version.py
tests/fixtures/media/: realistic-speech-gaps-short.LICENSE.md  realistic-speech-gaps.LICENSE.md
