[project]
name = "vided"
version = "0.1.8"
description = "A simple local video silence speeder and rectangular blur redactor."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "onnxruntime>=1.16.1",
    "Pillow>=10.1",
]

[project.scripts]
vided = "vided.cli:main"

[dependency-groups]
dev = [
    "actionlint-py>=1.7.12.24",
    "prek>=0.3.11",
    "pytest>=8.0",
    "pytest-playwright>=0.7.2",
    "ruff>=0.8",
    "ty>=0.0.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vided"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
    "/uv.lock",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "browser: exercises the browser UI through Playwright",
    "e2e: exercises real fixture media and external ffmpeg/onnx tooling",
]
